feat: PoC hybrid module-path resolution (-Djbang.hybrid.module.resolve)
Proof of concept for jbangdev/jbang#2511: instead of special-casing JavaFX,
treat the script as a class-path application but promote every resolved
dependency that is a real (non-automatic) module onto the `--module-path`,
adding those modules as `--add-modules` roots so the boot layer resolves
them and their `requires` transitively. Plain jars and automatic modules
stay on the class-path.

Leaving automatic modules on the class-path is the key: their name is
derived from the file name and may be an invalid Java identifier (e.g.
`fastparse_2.13-2.3.3.jar` -> `fastparse.2.13`), which aborts boot-layer
initialization if such a jar is forced onto the module-path.

Gated behind the system property `jbang.hybrid.module.resolve` so the
default behaviour is unchanged. Verified on a mixed dependency set
(org.openjfx:javafx-web:26.0.1 + com.lihaoyi:fastparse_2.13:2.3.3): with
the flag set, javafx.web/jdk.jsobject land on the module-path, fastparse
stays on the class-path, and the app boots -- without any JavaFX
special-casing.

Refs #559, #2511

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>